c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/no_return_value.c
int foo(void) {
  // function with non-void return type
  // must return a value
  return;
}

int main(void) {
  foo();
  return 0;
}